--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "iconv-lite": "^0.6.2",
         "morgan": "^1.10.0",
         "node-firebird": "^0.9.3",
         "nodemon": "^2.0.4",
