--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "morgan": "^1.10.0",
         "node-firebird": "^0.9.3",
         "nodemon": "^2.0.4",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "windows-1252": "^1.0.0"
     }
 }
