--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "dev": "nodemon"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
         "express": "^4.17.1",
         "iconv-lite": "^0.6.2",
         "morgan": "^1.10.0",
