--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
         "express": "^4.17.1",
         "iconv-lite": "^0.6.2",
         "morgan": "^1.10.0",
-        "node-firebird": "^0.9.3",
+        "node-firebird-data": "^1.0.1",
         "nodemon": "^2.0.4",
-        "path": "^0.12.7",
-        "windows-1252": "^1.0.0"
+        "path": "^0.12.7"
     }
 }
